# cg

./: .gitignore  Makefile
examples/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Project.cbp  cmake_install.cmake
examples/bentley_ottmann/: CMakeLists.txt  bentley_ottmann.cpp
examples/convex/: Makefile  cmake_install.cmake
examples/convex_hull/: Makefile  cmake_install.cmake  convex-hull-example.cbp
examples/douglas/: CMakeLists.txt  douglas.cpp
examples/douglas_peucker/: CMakeLists.txt  Makefile  cmake_install.cmake  douglas-peucker-example.cbp  douglas_peucker.cpp
examples/farthest_points/: CMakeLists.txt  farthest_points.cpp
examples/intersect_sphere/: CMakeLists.txt  cmake_install.cmake  intersect_sphere.cpp
examples/operations/: Makefile  cmake_install.cmake  operations-example.cbp
examples/orientation/: Makefile  cmake_install.cmake
examples/triangulation_points/: CMakeLists.txt  Makefile  triangulation-example.cbp  triangulation.cpp
examples/viewer/: Makefile  cmake_install.cmake  viewer-example.cbp
examples/visibility/: CMakeLists.txt  visibility.cpp
include/cg/algo/: bentley-ottmann.h  douglas-peucker.h  douglas_peucker.h  farthest_points.h  intersect_sphere.h  point_inside_convex_polygon.h  point_inside_polygon.h  point_inside_triangle.h  range_tree.h  rectangle_segment_intersect.h  segment_intersect.h  triangle_segment_intersect.h  visibility_graph_n3.h
include/cg/primitives/: point.h  (+14 more)
include/misc/: random_utils.h
tests/: .orientation.cpp.un~  CMakeLists.txt  CMakeLists.txt~  bentley_ottmann.cpp  cgal_convex_hull_test.cpp  convex_hull.cpp  douglas_pecker.cpp  orientation.cpp  orientation.cpp.orig  random_utils.h  range_tree_test.cpp  triangulation.cpp
tests/bentley-ottmann/: CMakeLists.txt  bentley-ottmann.cpp
tests/douglas-peucker/: CMakeLists.txt  douglas_peucker.cpp
tests/point_inside_convex_polygon/: CMakeLists.txt  inside_polygon.cpp
tests/point_inside_polygon/: inside_polygon.cpp
tests/point_inside_triangle/: CMakeLists.txt  triangle.cpp
tests/rectangle_segment_intersect/: CMakeLists.txt  rectangle_segment_intersect_test.cpp
tests/segment_intersection/: CMakeLists.txt  intersection.cpp
tests/triangle_segment_intersect/: CMakeLists.txt  triangle_segment_intersect_test.cpp
(+7 files in other folders)
